<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="24dp">

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
        <EditText
            android:id="@+id/email"
            android:layout_width="match_parent"
            android:layout_height="48dip"
            android:background="@drawable/input_field"
            android:hint="Username or Mobile"
            android:imeOptions="actionNext"
            android:inputType="text"
            android:maxLines="1"
            android:paddingLeft="16.0dip"
            android:paddingRight="16.0dip"
            android:textColor="#FFF"
            android:textColorHint="#b3ffffff"
            android:textCursorDrawable="@null" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:passwordToggleEnabled="true">
        <EditText
            android:id="@+id/Password"
            android:layout_width="match_parent"
            android:layout_height="48dip"
            android:layout_marginTop="@dimen/activity_horizontal_margin"
            android:background="@drawable/input_field"
            android:hint="@string/password"
            android:imeOptions="actionDone"
            android:inputType="textPassword"
            android:maxLines="1"
            android:paddingLeft="16.0dip"
            android:paddingRight="16.0dip"
            android:textColor="#FFF"
            android:textColorHint="#b3ffffff"
            android:textCursorDrawable="@null" />
        </android.support.design.widget.TextInputLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="2dp"
            android:layout_marginTop="2dp"
            android:orientation="horizontal">

            <CheckBox
                android:id="@+id/rememberme"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/textView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="Remember Me"


                android:textColor="#6d3229"
                android:textSize="14sp"
                android:textStyle="bold" />

        </LinearLayout>

        <Button
            android:id="@+id/btnSignIn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:background="@null"
            android:text="@string/sign_in"
            android:textColor="#FFF"
            android:textSize="28sp"
            android:textStyle="bold" />


        <Button
            android:id="@+id/btnForgotPassword"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:background="@android:color/transparent"
            android:focusable="true"
            android:gravity="center"
            android:text="@string/forgot_password"
            android:textColor="#FFF"
            android:textSize="16sp" />

    </LinearLayout>


</RelativeLayout>