<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:fillViewport="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical"
            android:padding="24dp">


            <EditText
                android:id="@+id/uname"
                android:layout_width="match_parent"
                android:layout_height="48dip"
                android:background="@drawable/input_field"
                android:focusable="true"
                android:focusableInTouchMode="true"
                android:hint="Name"
                android:imeOptions="actionNext"
                android:inputType="text"
                android:maxLines="1"
                android:paddingLeft="16.0dip"
                android:paddingRight="16.0dip"
                android:textColor="#FFF"
                android:textColorHint="#b3ffffff"
                android:textCursorDrawable="@null" />



            <EditText
                android:id="@+id/inPhone"
                android:layout_width="match_parent"
                android:layout_height="48dip"
                android:layout_marginTop="@dimen/activity_vertical_margin"
                android:background="@drawable/input_field"
                android:focusable="true"
                android:focusableInTouchMode="true"
                android:hint="Mobile"
                android:maxLength="10"
                android:imeOptions="actionNext"
                android:inputType="phone"
                android:maxLines="1"
                android:paddingLeft="16.0dip"
                android:paddingRight="16.0dip"
                android:textColor="#FFF"
                android:textColorHint="#b3ffffff"
                android:textCursorDrawable="@null" />

            <EditText
                android:id="@+id/inPassword"
                android:layout_width="match_parent"
                android:layout_height="48dip"
                android:layout_marginTop="@dimen/activity_vertical_margin"
                android:background="@drawable/input_field"
                android:focusable="true"
                android:focusableInTouchMode="true"
                android:hint="@string/password"
                android:imeOptions="actionNext"
                android:inputType="textWebPassword"
                android:maxLines="1"
                android:paddingLeft="16.0dip"
                android:paddingRight="16.0dip"
                android:textColor="#FFF"
                android:textColorHint="#b3ffffff"
                android:textCursorDrawable="@null" />


            <EditText
                android:id="@+id/inConfirmPassword"
                android:layout_width="match_parent"
                android:layout_height="48dip"
                android:layout_marginTop="@dimen/activity_vertical_margin"
                android:background="@drawable/input_field"
                android:focusable="true"
                android:focusableInTouchMode="true"
                android:fontFamily="sans-serif-light"
                android:hint="@string/confirm_password"
                android:imeOptions="actionNext"
                android:inputType="textPassword"
                android:maxLines="1"
                android:paddingLeft="16.0dip"
                android:paddingRight="16.0dip"
                android:textColor="#FFF"
                android:textColorHint="#b3ffffff"
                android:textCursorDrawable="@null" />
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="2dp"
                android:layout_marginTop="2dp"
                android:orientation="horizontal">

                <CheckBox
                    android:id="@+id/checkBoxTerms"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

                <TextView
                    android:id="@+id/textView3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="Accept terms and conditions"

                    android:textColor="#6d3229"
                    android:textSize="14sp"
                    android:textStyle="bold" />

            </LinearLayout>

            <Button
                android:id="@+id/btnRegister"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:background="@null"
                android:text="@string/register"
                android:textColor="#FFF"
                android:textSize="28sp"
                android:textStyle="bold" />
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                app:layout_constraintTop_toBottomOf="@+id/l1"
                android:layout_marginTop="20dp"
                >
                <ProgressBar
                    android:id="@+id/progressBar"
                    style="?android:attr/progressBarStyleHorizontal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:indeterminate="false"
                    android:maxHeight="20dip"
                    android:minHeight="20dip"
                    android:layout_weight="1"
                    android:progress="0"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal"
                    android:text="Weak"
                    android:id="@+id/password_strength" />
            </LinearLayout>



        </LinearLayout>

    </ScrollView>

</RelativeLayout>